Add Sequelize and the Patient model

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.4",
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "pg": "^7.3.0",
+    "sequelize": "^4.13.5"
   }
 }
