--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "express": "^4.16.1",
     "migrations": "^0.1.7",
     "pg": "^7.3.0",
-    "sequelize": "^4.13.5"
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.15.0",
+    "sequelize-cli": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
